# diarization

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  loc.yml
benches/: ahc.rs  centroid.rs  ops.rs  pipeline.rs  segment.rs  vbx.rs
ci/: miri_sb.sh  miri_tb.sh  sanitizer.sh  sde_avx2.sh  sde_avx512.sh
crates/dia-burn/: Cargo.toml  README.md  build.rs
crates/dia-burn/src/: lib.rs
crates/dia-core/: Cargo.toml  README.md
crates/dia-core/examples/: run_offline_from_captures.rs
crates/dia-core/src/: lib.rs
crates/dia-core/tests/: parity_drift_10.rs
crates/dia-core/tests/parity/: hyp_01_dialogue.rttm  hyp_02_pyannote_sample.rttm
crates/dia-core/tests/parity/python/: capture_intermediates.py  verify_capture.py
crates/dia-core/tests/parity/python/dia_parity_reference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
crates/dia-ort/: Cargo.toml
crates/dia-ort/src/: lib.rs
crates/dia-tch/: Cargo.toml
crates/dia-tch/src/: lib.rs
docs/design/: 2026-05-04-mmap-spill-large-allocations.md
docs/superpowers/plans/: 2026-04-25-dia-segment.md  2026-04-26-dia-embed-cluster-diarizer-impl.md  2026-04-28-dia-phase1-plda-rust-port.md  2026-04-28-dia-pyannote-parity-phase-0-capture.md  2026-04-29-dia-phase2-vbx-hmm.md  2026-04-29-dia-phase3-constrained-hungarian.md
docs/superpowers/specs/: 2026-04-25-dia-segment-design.md  2026-04-26-dia-embed-cluster-diarizer-design.md
examples/: chacha_fixture_gen.rs  diarize_from_wav.rs  run_offline_from_captures.rs  run_owned_pipeline.rs  run_owned_pipeline_tch.rs  run_streaming_pipeline.rs  stream_from_wav.rs  stream_layer1.rs
models/: SOURCE.md  wespeaker_resnet34_lm.onnx
models/plda/: SOURCE.md
scripts/: download-embed-model.sh  download-model.sh  download-test-fixtures.sh  export-wespeaker-torchscript.py  extract-plda-blobs.sh  extract-plda-eigenvectors.py  fix_wespeaker_pooling_eps.py
spikes/kaldi_fbank/: Cargo.toml
spikes/kaldi_fbank/python/: pyproject.toml  reference.py
spikes/kaldi_fbank/src/: main.rs
src/: ep.rs  lib.rs  ort_serde.rs
src/aggregate/: count.rs  mod.rs  parity_tests.rs
src/ahc/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/centroid/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/cluster/: agglomerative.rs  error.rs  mod.rs  offline.rs  online.rs  options.rs  spectral.rs  test_util.rs  tests.rs  types.rs
src/cluster/ahc/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/cluster/centroid/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/cluster/hungarian/: algo.rs  error.rs  lsap.rs  mod.rs  parity_tests.rs  tests.rs
src/cluster/vbx/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/diarizer/: builder.rs  error.rs  imp.rs  mod.rs  overlap.rs  reconstruct.rs  span.rs  tests.rs
src/embed/: embedder.rs  error.rs  fbank.rs  mod.rs  model.rs  options.rs  torchaudio_fbank.rs  types.rs
src/hungarian/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/offline/: algo.rs  mod.rs  owned.rs  owned_smoke_tests.rs  parity_tests.rs  tests.rs
src/ops/: mod.rs  spill.rs
src/ops/arch/: mod.rs
src/ops/arch/neon/: dot.rs  exp.rs  mod.rs  pdist_euclidean.rs
src/ops/arch/x86_avx2/: axpy.rs  dot.rs  pdist_euclidean.rs
src/ops/arch/x86_avx512/: axpy.rs  dot.rs  pdist_euclidean.rs
src/ops/dispatch/: axpy.rs  dot.rs  exp.rs  inv_l_row.rs  lse.rs  mod.rs  pdist_euclidean.rs
src/ops/scalar/: axpy.rs  dot.rs  exp.rs  inv_l_row.rs  kahan.rs  mod.rs  pdist_euclidean.rs
src/pipeline/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/plda/: error.rs  loader.rs  mod.rs  parity_tests.rs  tests.rs  transform.rs
src/reconstruct/: algo.rs  error.rs  mod.rs  parity_tests.rs  rttm.rs  rttm_parity_tests.rs  tests.rs
src/reconstruct_pyannote/: algo.rs  error.rs  mod.rs  parity_tests.rs  rttm.rs  rttm_parity_tests.rs  tests.rs
src/segment/: error.rs  hysteresis.rs  mod.rs  model.rs  options.rs  powerset.rs  segmenter.rs  stitch.rs  types.rs  window.rs
src/streaming/: mod.rs  offline_diarizer.rs  pipeline.rs
src/vbx/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
tests/: chacha_keystream_fixture.rs  integration_diarizer.rs  integration_embed.rs  integration_segment.rs  parity_drift_10.rs  parity_fixtures_endtoend.rs  parity_plda.rs
tests/parity/: Cargo.toml  README.md  hyp.rttm  hyp_03_dual_speaker.rttm  hyp_04_three_speaker.rttm  hyp_05_four_speaker.rttm  hyp_06_long_recording.rttm  run.sh
tests/parity/fixtures/01_dialogue/: manifest.json  plda_embeddings.npz  reconstruction.npz  vbx_state.npz
tests/parity/python/: capture_intermediates.py  inspect_pyannote.py  pyproject.toml  reference.py  score.py
tests/parity/src/: main.rs
