[package]
name = "diarization"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
# `dia` source is MIT OR Apache-2.0 (caller's choice).
# `models/plda/*.bin` are embedded into the compiled artifact via
# `include_bytes!` (see `src/plda/loader.rs`); those weights are
# CC-BY-4.0 with attribution required.
# `models/segmentation-3.0.onnx` is embedded under the
# `bundled-segmentation` feature (default-on) via `include_bytes!`
# (see `src/segment/model.rs`); upstream license is MIT (BUT/Bohdal et
# al., pyannote/segmentation-3.0). See `NOTICE` and `models/SOURCE.md`
# for attribution. Downstream redistributors of any binary linking `dia`
# MUST reproduce both the MIT segmentation attribution and the CC-BY-4.0
# PLDA attribution.
license = "(MIT OR Apache-2.0) AND MIT AND CC-BY-4.0"
repository = "https://github.com/al8n/diarization"
homepage = "https://github.com/al8n/diarization"
documentation = "https://docs.rs/diarization"
description = "Sans-I/O speaker diarization for streaming audio. Bundles the pyannote/segmentation-3.0 model and the speaker-diarization-community-1 PLDA weights — only the WeSpeaker embedding ONNX is BYO."
readme = "README.md"

[features]
default = ["ort", "bundled-segmentation"]
# `Serialize`/`Deserialize` impls for the public `*Options` and
# `*Config` types so callers can persist diarization configuration
# (e.g. JSON/TOML/YAML profiles for different deployments). Mirrors
# the sister `silero` crate's pattern: `Duration` fields go through
# `humantime-serde` ("250ms" / "1.5s" rather than raw nanos), and
# foreign types (`ort::session::builder::GraphOptimizationLevel`)
# are bridged through wrapper modules. Off by default to keep the
# default dep graph minimal.
serde = ["dep:serde", "dep:humantime-serde"]
ort = ["dep:ort"]
# Embed `models/segmentation-3.0.onnx` (~6 MB) into the compiled artifact
# via `include_bytes!` so callers can construct `SegmentModel::bundled()`
# without provisioning the file on disk. Off-switch for callers who BYO a
# different segmentation model (e.g. a fine-tuned variant) — they go
# through `SegmentModel::from_file` / `from_memory` as before. Adds
# ~6 MB to the dia binary; turn off with `default-features = false`
# if you ship the model separately. Requires `ort` (not gated separately
# because the bundled bytes are useless without the inference runtime
# they feed into). Source: pyannote/segmentation-3.0 on HuggingFace
# (MIT — see NOTICE for attribution).
bundled-segmentation = ["ort"]
# Alternative embedding inference backend via tch (libtorch C++ bindings).
# Off by default — pulls in libtorch (≈600 MB shared library) and
# typically requires `LIBTORCH` env var pointing at a libtorch install.
# Enables a TorchScript backend for the WeSpeaker embedding model that
# matches pyannote's PyTorch inference bit-exactly on hard cases (e.g.
# heavy-overlap fixtures where ONNX→ORT diverges by O(1) per element).
# When ON, callers can construct via `EmbedModel::from_torchscript_file`
# in addition to the existing `from_file` (ONNX). See
# `scripts/export-wespeaker-torchscript.py` for the model export step.
tch = ["dep:tch"]
# Pulls in the sister `silero` crate (path dep at `../silero/`) as an
# optional dependency, used only by the `run_streaming_pipeline` example
# to drive VAD externally. The crate's lib + non-streaming examples do
# NOT depend on silero, so a clean checkout can `cargo build` /
# `cargo test --no-default-features --features ort` without the sibling
# directory present. Enable this feature when building the streaming
# example or developing with VAD in scope. Codex review CRITICAL: prior
# `silero = { path = "../silero" }` as a non-optional dep broke clean
# CI checkouts whenever `../silero/` wasn't materialized alongside.
silero-vad = ["dep:silero"]
# Internal feature for benchmarks. Exposes pub(crate) modules
# (`vbx`, `ahc`, `centroid`, `pipeline`, `reconstruct`, `hungarian`,
# `plda`) as `pub` so external benches in `benches/*.rs` can call the
# inner kernels directly. Not part of the public API contract — the
# `_` prefix marks it as private; downstream callers should reach the
# pipeline via `Diarizer` once Phase 5c integration lands.
_bench = []
# An earlier revision exposed `diarization::plda::RawEmbedding::from_raw_array`
# and `diarization::plda::PostXvecEmbedding::from_pyannote_capture` behind a
# public `plda-fixtures` feature, intending it to act as the gate that
# kept distribution-invariant constructors out of production code.
# Cargo features are unified across the dep graph though, so any crate
# in the build (including parity tooling and offline scripts) enabling
# `plda-fixtures` would have re-exposed those constructors for the
# entire compile, collapsing the type-level guard. Codex review
# MEDIUM. The constructors are now `#[cfg(test)] pub(crate)` and the
# parity test lives inside the crate as a `#[cfg(test)]` module so it
# can still construct via the internal API. Production integration
# (Phase 5+) will own a single typed entry from `EmbedModel`.
# `std` is now unconditional. The crate uses std/alloc throughout
# (`Vec`, `HashMap`, `kaldi-native-fbank` C bindings, `nalgebra`'s
# default `std` feature, etc.); the previous `#![no_std]` toggle was
# advertised but never actually compiled. Codex review HIGH —
# `cargo check --no-default-features` failed with 47 errors before.
# If a future Sans-I/O / `alloc`-only mode is wanted, it will need a
# real audit of the dependency set, not just a feature flag.

[dependencies]
mediatime = "0.1"
thiserror = "2"
ort = { version = "2.0.0-rc.12", optional = true }
tch = { version = "0.24", optional = true }

# New in v0.1.0 phase 2 (spec §7).
kaldi-native-fbank = "0.1"
nalgebra = "0.34"
rand = { version = "0.10", default-features = false }
rand_chacha = { version = "0.10", default-features = false }

# Phase 3: constrained Hungarian assignment.
ordered-float = "5.3"
pathfinding = "4.15"

# Phase 4: AHC initialization (centroid-method linkage).
kodama = "0.3"

# Phase 5: integer→decimal-string rendering for pyannote's
# `Annotation.labels()` lex-sort (cluster id → SPEAKER_NN label
# remapping in RTTM emission). itoa::Buffer is a [u8; 40] stack
# buffer — allocation-free.
itoa = "1"

# Spill backend (round-28 of adversarial review): the AHC pdist /
# reconstruct grid / aggregate frame buffers cross 256 MB on
# pathological inputs. `SpillVec<T>` falls back to file-backed mmap
# above the configurable threshold so the same inputs succeed at
# the cost of disk I/O instead of OOM-aborting the
# `Result`-returning pipeline. See `src/ops/spill.rs`.
memmapix = "0.9"
bytemuck = "1"
tempfile = "3"
# Cross-platform `File::allocate` for the spill backend
# (`posix_fallocate` on Linux, `F_PREALLOCATE` on macOS,
# `SetFileValidData`/`SetEndOfFile` on Windows). Reserves disk blocks
# before mmap so writes through the mapping cannot SIGBUS on
# ENOSPC. Used in `ops::spill::SpillBytesMut::new_mmap`.
fs4 = "1"
# `rustix::fs::OFlags::TMPFILE` on Linux/Android: the spill backend
# opens an anonymous (never-linked) tempfile so there is no race
# window between create + unlink for a same-UID process to grab a
# writable fd. `tempfile`'s Linux fast path also tries `O_TMPFILE`
# but silently falls back to `mkstemp + unlink` on filesystems
# without support — we want to surface that as a typed error
# instead. `rustix` is already in the dep graph transitively via
# `tempfile` / `fs4`, so promoting it to a direct dependency adds
# no compile-time cost while letting us avoid a separate `libc`
# import.
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
rustix = { version = "1", features = ["fs"] }

# Phase 5e: silero VAD for streaming voice-range detection. Sister
# project at `findit-studio/silero` (path dep until both publish to
# the same registry). Optional + feature-gated so clean checkouts
# without `../silero/` materialized still build the lib (Codex review
# CRITICAL). Enable via `--features silero-vad`.
silero = { version = "0.2", optional = true }

# Optional `serde` support for `*Options` / `*Config` types. Gated
# behind `feature = "serde"`. `humantime-serde` provides the
# "humantime" string format ("250ms", "1.5s") for `Duration` fields
# — same convention as the sister `silero` crate.
serde = { version = "1", optional = true, features = ["derive"] }
humantime-serde = { version = "1", optional = true }


[dev-dependencies]
anyhow = "1"
criterion = "0.8"
hound = "3"
# `diarization::plda` parity tests load Phase-0 captured `.npz` artifacts.
# Production code embeds the PLDA weights via `include_bytes!` and
# does not depend on npyz.
npyz = { version = "0.9", features = ["npz"] }
# Used by the `serde` feature's roundtrip tests.
serde_json = "1"

[[example]]
path = "examples/run_owned_pipeline_tch.rs"
name = "run_owned_pipeline_tch"
required-features = ["tch", "ort"]

[[example]]
path = "examples/run_streaming_pipeline.rs"
name = "run_streaming_pipeline"
required-features = ["silero-vad", "ort"]

[[bench]]
path = "benches/segment.rs"
name = "segment"
harness = false

[[bench]]
path = "benches/ops.rs"
name = "ops"
harness = false
required-features = ["_bench"]

[[bench]]
path = "benches/vbx.rs"
name = "vbx"
harness = false
required-features = ["_bench"]

[[bench]]
path = "benches/ahc.rs"
name = "ahc"
harness = false
required-features = ["_bench"]

[[bench]]
path = "benches/centroid.rs"
name = "centroid"
harness = false
required-features = ["_bench"]

[[bench]]
path = "benches/pipeline.rs"
name = "pipeline"
harness = false
required-features = ["_bench"]

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
  'cfg(diarization_force_scalar)',
  'cfg(diarization_disable_avx2)',
  'cfg(diarization_disable_avx512)',
  'cfg(diarization_assert_avx2)',
  'cfg(diarization_assert_avx512)',
] }
