[workspace]
resolver = "3"
members = [
  # Pure-algorithm core + types + (currently) inference backends.
  # Phase B will extract `dia-ort` / `dia-tch` / `dia-burn` from
  # this crate; Phase A keeps everything inside `dia-core` so the
  # workspace skeleton lands without behavior change.
  "crates/dia-core",
]
exclude = [
  # The parity harness is its own throwaway sub-Cargo project (uses
  # uv-managed Python deps + a tiny Rust binary). Excluded from the
  # workspace so cargo doesn't try to resolve its locked-down deps
  # alongside dia-core's.
  "crates/dia-core/tests/parity",
]

# Workspace-wide lint config. Members opt in via `[lints] workspace = true`.
# Mirrors what `crates/dia-core/Cargo.toml` declared before the
# workspace move; backend crates added later (`dia-ort`, `dia-tch`,
# `dia-burn`) inherit the same defaults.
[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
  'cfg(diarization_force_scalar)',
  'cfg(diarization_disable_avx2)',
  'cfg(diarization_disable_avx512)',
  'cfg(diarization_assert_avx2)',
  'cfg(diarization_assert_avx512)',
  'cfg(diarization_assert_neon)',
] }

# Dev profile inherits cargo defaults; release tuning lives below.
[profile.release]
# `lto = "thin"` cut release build time roughly in half on ORT
# inference benches with no measurable runtime regression.
lto = "thin"
