[workspace]
resolver = "3"
members = [
  # Pure-algorithm core + types. Phase B is moving inference
  # backends out of this crate into siblings; the `tch` / `ort`
  # optional deps still live here mid-migration.
  "crates/dia-core",
  # ONNX Runtime backend (placeholder; SegmentModel / EmbedModel
  # move here from dia-core in follow-up commits in this branch).
  "crates/dia-ort",
  # TorchScript backend (placeholder; EmbedModel::from_torchscript_file
  # moves here from dia-core).
  "crates/dia-tch",
]
exclude = [
  # The parity harness is its own throwaway sub-Cargo project (uses
  # uv-managed Python deps + a tiny Rust binary). Excluded from the
  # workspace so cargo doesn't try to resolve its locked-down deps
  # alongside dia-core's.
  "crates/dia-core/tests/parity",
  # `dia-burn` ships its own resolution graph because cargo's
  # `links = "tch"` collision check unifies workspace members. The
  # parent `dia-core` declares `tch = "0.24"` (optional, for the
  # tch backend); `burn 0.21.0-pre.5` carries an optional
  # `burn-tch` that links to `tch ^0.22`. Two tch versions in one
  # graph fail resolution, even though both stay unactivated.
  # Splitting `dia-burn` out into a sibling crate with its own
  # `Cargo.lock` keeps the parent's `tch` decl invisible to burn
  # and vice-versa.
  "crates/dia-burn",
]

# Workspace-wide lint config. Members opt in via `[lints] workspace = true`.
# Mirrors what `crates/dia-core/Cargo.toml` declared before the
# workspace move; backend crates added later (`dia-ort`, `dia-tch`,
# `dia-burn`) inherit the same defaults.
[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
  'cfg(diarization_force_scalar)',
  'cfg(diarization_disable_avx2)',
  'cfg(diarization_disable_avx512)',
  'cfg(diarization_assert_avx2)',
  'cfg(diarization_assert_avx512)',
  'cfg(diarization_assert_neon)',
] }

# Dev profile inherits cargo defaults; release tuning lives below.
[profile.release]
# `lto = "thin"` cut release build time roughly in half on ORT
# inference benches with no measurable runtime regression.
lto = "thin"

# Bench profile lifted up here from `crates/dia-core/Cargo.toml`
# during the Phase A workspace move. Cargo only honors `[profile.*]`
# at the workspace root once a package becomes a member, so the
# in-crate copy was being silently ignored. This keeps the
# pre-workspace bench tuning intact for `cargo bench -p diarization`.
[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
