[package]
name = "dia-ort"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "(MIT OR Apache-2.0) AND MIT"
repository = "https://github.com/al8n/diarization"
documentation = "https://docs.rs/dia-ort"
description = "ONNX Runtime (ort) inference backend for the dia diarization pipeline. Provides `SegmentModel` (pyannote/segmentation-3.0) and `EmbedModel` (WeSpeaker ResNet34-LM)."
readme = "README.md"

[features]
default = ["bundled-segmentation"]
# Embed `models/segmentation-3.0.onnx` (~6 MB) into the compiled
# artifact via `include_bytes!`. Mirrors the same feature in
# pre-split `diarization`.
bundled-segmentation = []
serde = ["dep:serde", "dep:humantime-serde", "diarization/serde"]

# ─── ONNX Runtime execution providers ─────────────────────────────────
# (Same surface as pre-split. Each feature pulls in the matching `ort`
# execution provider. Vendor-specific EPs need the corresponding native
# library installed on the host — see <https://ort.pyke.io/perf/execution-providers>.)
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
rocm = ["ort/rocm"]
migraphx = ["ort/migraphx"]
openvino = ["ort/openvino"]
webgpu = ["ort/webgpu"]
xnnpack = ["ort/xnnpack"]
onednn = ["ort/onednn"]
cann = ["ort/cann"]
acl = ["ort/acl"]
qnn = ["ort/qnn"]
nnapi = ["ort/nnapi"]
tvm = ["ort/tvm"]
azure = ["ort/azure"]
gpu = ["cuda", "tensorrt", "coreml", "directml", "rocm", "webgpu"]

[dependencies]
# Path-dep on the umbrella crate (still named `diarization` mid-
# refactor; rename to `dia-core` lands when the meta-crate
# arrives). Phase B keeps the dep name correct so we can extract
# code piece by piece without breaking imports across the
# workspace at every step.
diarization = { version = "0.1", path = "../dia-core" }
ort = "2.0.0-rc.12"
thiserror = "2"
nalgebra = "0.34"

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dependencies.humantime-serde]
version = "1"
optional = true

[lints]
workspace = true
