[workspace]

[package]
name = "dia-parity"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
# Enable the `ep-coreml` feature so we can flip the CoreML provider
# on via the `DIA_USE_COREML_*` env vars in `src/main.rs`. The full
# `ep-*` matrix is documented in dia's `Cargo.toml`; flip the right
# feature on for the GPU/EP you want to benchmark on.
diarization = { path = "../..", features = ["ort", "ep-coreml"] }
hound = "3"
anyhow = "1"
