[project]
name = "dia-parity-reference"
version = "0.0.0"
requires-python = ">=3.10"
# `pyannote.audio` is pinned to an exact version (== rather than >=)
# because the captured intermediates are a frozen snapshot. If
# pyannote ships a behavior change, `verify_capture.py` must fail
# loudly so we re-snapshot deliberately rather than letting drift
# leak into Rust-port reviews.
dependencies = [
  "pyannote.audio == 4.0.4",
  "pyannote.metrics >= 3.2",
  "numpy >= 1.26",
]

# Disable setuptools auto-discovery (PEP 517 default in modern setuptools).
# This project carries Python scripts only — no installable package layout —
# so an empty `packages` list lets `uv pip install -e .` install just the
# project metadata + dependencies without erroring on auto-discovery.
[tool.setuptools]
packages = []
